--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body data-spy="scroll" data-target="#bs-example-navbar-collapse-1">
-    <div id="my-page">
+    <div id="skrollr-body">
         <section id="top">
             <div class="container-fluid head">
                 <nav class="navbar navbar-expand-md fixed-top navbar-light bg-faded" role="navigation">
