--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="col-12 col-md-6 mx-auto item">
                     <a href="accenture.html">
                         <div class="preview">
-                            <img src="img/accenture-hero.png">
+                            <img src="img/accenture-hero.jpg">
                             <div class="labels">
                                 <div class="label">UX Design</div>
                                 <div class="label">UI Design</div>
@@ -111,7 +111,7 @@
                 <div class="col-12 col-md-6 item">
                     <a href="projectshowcase.html">
                         <div class="preview">
-                            <img src="img/project-showcase.png">
+                            <img src="img/project-showcase.jpg">
                             <div class="caption">Project Showcase</div>
                         </div>
                     </a>
