--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body data-spy="scroll" data-target="#bs-example-navbar-collapse-1">
-    <div id="skrollr-body">
+    <div id="my-page">
         <section id="top">
             <div class="container-fluid head">
                 <nav class="navbar navbar-expand-md fixed-top navbar-light bg-faded" role="navigation">
@@ -50,7 +50,7 @@
            </div>
        </section>
        
-       <section id="work">
+       <section id="skrollr-body">
         <div class="container-fluid work">
             <div class="row works">
                 <div class="col-12 col-md-6 mx-auto item">
