OneService page updates

--- a/oneservice.html
+++ b/oneservice.html
@@ -52,7 +52,7 @@
             <div class="container-fluid oneservice-summary">
                 <div class="row">
                     <div class="col-12 wow fadeIn">
-                        <img src="img/oneservice-hero.png">
+                        <img src="img/oneservice-hero.jpg">
                     </div>
                 </div>
 
@@ -150,11 +150,11 @@
                 <div class="row image-block wow fadeIn">
                     <div class="col-md-2"></div>
                     <div class="col-6 col-md-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-1.png">
+                        <img src="img/oneservice-app-prototype-1.jpg">
                         <div class="caption">Previous Home Page</div>
                     </div>
                     <div class="col-6 col-md-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-2.png">
+                        <img src="img/oneservice-app-prototype-2.jpg">
                         <div class="caption">Redesigned Home Page</div>
                     </div>
                     <div class="col-md-2"></div>
@@ -175,11 +175,11 @@
                 <div class="row image-block wow fadeIn">
                     <div class="col-md-2"></div>
                     <div class="col-6 col-md-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-3.png">
+                        <img src="img/oneservice-app-prototype-3.jpg">
                         <div class="caption">Previous 'Submit New Case' Page</div>
                     </div>
                     <div class="col-6 col-md-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-4.png">
+                        <img src="img/oneservice-app-prototype-4.jpg">
                         <div class="caption">Redesigned 'Submit New Case' Page</div>
                     </div>
                     <div class="col-md-2"></div>
@@ -193,13 +193,13 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-5.png">
+                        <img src="img/oneservice-app-prototype-5.jpg">
                     </div>
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-6.png">
+                        <img src="img/oneservice-app-prototype-6.jpg">
                     </div>
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-7.png">
+                        <img src="img/oneservice-app-prototype-7.jpg">
                     </div>
                 </div>
 
@@ -212,11 +212,11 @@
                 <div class="row image-block wow fadeIn">
                     <div class="col-md-2"></div>
                     <div class="col-6 col-md-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-8.png">
+                        <img src="img/oneservice-app-prototype-8.jpg">
                         <div class="caption">Previous 'Case Submitted' Page</div>
                     </div>
                     <div class="col-6 col-md-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-9.png">
+                        <img src="img/oneservice-app-prototype-9.jpg">
                         <div class="caption">New 'Confirm Submission' Page</div>
                     </div>
                     <div class="col-md-2"></div>
@@ -231,10 +231,10 @@
                 <div class="row image-block wow fadeIn">
                     <div class="col-md-2"></div>
                     <div class="col-6 col-md-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-10.png">
+                        <img src="img/oneservice-app-prototype-10.jpg">
                     </div>
                     <div class="col-6 col-md-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-11.png">
+                        <img src="img/oneservice-app-prototype-11.jpg">
                     </div>
                     <div class="col-md-2"></div>
                 </div>
@@ -253,13 +253,13 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-12.png">
+                        <img src="img/oneservice-app-prototype-12.jpg">
                     </div>
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-13.png">
+                        <img src="img/oneservice-app-prototype-13.jpg">
                     </div>
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-14.png">
+                        <img src="img/oneservice-app-prototype-14.jpg">
                     </div>
                 </div>
 
@@ -271,13 +271,13 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-15.png">
+                        <img src="img/oneservice-app-prototype-15.jpg">
                     </div>
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-16.png">
+                        <img src="img/oneservice-app-prototype-16.jpg">
                     </div>
                     <div class="col-4 mx-auto">
-                        <img src="img/oneservice-app-prototype-17.png">
+                        <img src="img/oneservice-app-prototype-17.jpg">
                     </div>
                 </div>
 
