Home page updates

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-brand">
-                        <a href="index.html#top" class="topnav"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
+                        <a href="#top" class="topnav"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link worknav" href="index.html#work">Work</a>
+                                <a class="nav-link worknav" href="#work">Work</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">About</a>
