InvestingNote page updates

--- a/investingnote.html
+++ b/investingnote.html
@@ -51,7 +51,7 @@
             <div class="container-fluid investingnote-summary">
                 <div class="row">
                     <div class="col-12 wow fadeIn">
-                        <img src="img/investingnote-hero.png">
+                        <img src="img/investingnote-hero.jpg">
                     </div>
                 </div>
 
@@ -119,10 +119,10 @@
 
                 <div class="row image-block wow fadeIn">
                     <div class="col-12 col-sm-6 mx-auto">
-                        <img src="img/investingnote-about-1.png">
+                        <img src="img/investingnote-about-1.jpg">
                     </div>
                     <div class="col-12 col-sm-6 mx-auto">
-                        <img src="img/investingnote-about-2.png">
+                        <img src="img/investingnote-about-2.jpg">
                     </div>
                 </div>
 
@@ -134,7 +134,7 @@
 
                <div class="row image-block">
                 <div class="col-12 col-sm-6 mx-auto wow fadeIn">
-                    <img src="img/investingnote-explore.png">
+                    <img src="img/investingnote-explore.jpg">
                 </div>
             </div>
 
@@ -152,10 +152,10 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/investingnote-dashboard.png">
+                    <img src="img/investingnote-dashboard.jpg">
                 </div>
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/investingnote-dashboard-2.png">
+                    <img src="img/investingnote-dashboard-2.jpg">
                 </div>
             </div>
 
@@ -173,7 +173,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/investingnote-profile.png">
+                    <img src="img/investingnote-profile.jpg">
                 </div>
             </div>
 
@@ -191,7 +191,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/investingnote-stock.png">
+                    <img src="img/investingnote-stock.jpg">
                 </div>
             </div>
 
@@ -216,7 +216,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-lg-8 mx-auto">
-                    <img src="img/investingnote-mobile-stocks.png">
+                    <img src="img/investingnote-mobile-stocks.jpg">
                 </div>
             </div>
 
@@ -234,7 +234,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-lg-8 mx-auto">
-                    <img src="img/investingnote-mobile-profile.png">
+                    <img src="img/investingnote-mobile-profile.jpg">
                 </div>
             </div>
 
@@ -253,7 +253,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/investingnote-mobile-portfolio-and-stock.png">
+                    <img src="img/investingnote-mobile-portfolio-and-stock.jpg">
                 </div>
             </div>
 
