Home page updates

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link worknav" href="#work">Work</a>
+                                <a class="nav-link worknav" href="index.html#work">Work</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">About</a>
@@ -43,7 +43,7 @@
                        <div class="description">
                            <p><h1>Hi! I'm Geng Hao.</h1></p>
                            <p>I'm an aspiring product designer from Singapore.</p>
-                           <p><a class="worknav" href="#work">View my work &#9662;</a></p>
+                           <p><a class="worknav" href="index.html#work">View my work &#9662;</a></p>
                        </div>
                    </div>
                </div>
