--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,600,600i|Yantramanav:300,400,500" rel="stylesheet">
 
 </head>
-<body data-spy="scroll" data-target="#bs-example-navbar-collapse-1">
+<body>
     <div id="my-page">
         <section id="top">
             <div class="container-fluid head">
@@ -143,6 +143,7 @@
 <script src="js/jquery-3.1.1.js"></script>
 <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="js/skrollr.min.js"></script>
+<script src="js/skrollr.menu.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/main.js"></script>
 </body>
