--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,6 @@
          </div>
      </section>
      
-     <div id="skrollr-body">
          <section id="work">
             <div class="container-fluid work">
                 <div class="row works">
@@ -113,6 +112,8 @@
                         <a href="projectshowcase.html">
                             <div class="preview">
                                 <img src="img/project-showcase.jpg">
+                                <div class="labels">
+                                </div>
                                 <div class="caption">Project Showcase</div>
                             </div>
                         </a>
@@ -136,7 +137,6 @@
                 </div>
             </div>
         </section>
-    </div>
 </div>
 
 <!-- JavaScript placed at the end of the document so the pages load faster -->
