--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,600,600i|Yantramanav:300,400,500" rel="stylesheet">
 
 </head>
-<body data-spy="scroll" data-target="#bs-example-navbar-collapse-1">
+<body>
     <div id="my-page">
         <section id="top">
             <div class="container-fluid head">
@@ -19,13 +19,13 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-brand">
-                        <a href="#top" class="topnav"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
+                        <a href="index.html#top" class="topnav"><img src="img/logo.png"><h1>Geng Hao T.</h1></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link worknav" href="index.html#work">Work</a>
+                                <a class="nav-link worknav" href="#work">Work</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">About</a>
@@ -40,101 +40,103 @@
             <div class="container-fluid intro" data-top="opacity: 1;" data-top-bottom="opacity: 0;">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                       <div class="description">
-                           <p><h1>Hi! I'm Geng Hao.</h1></p>
-                           <p>I'm an aspiring product designer from Singapore.</p>
-                           <p><a class="worknav" href="index.html#work">View my work &#9662;</a></p>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </section>
-       
-       <section id="skrollr-body">
-        <div class="container-fluid work">
-            <div class="row works">
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="accenture.html">
-                        <div class="preview">
-                            <img src="img/accenture-hero.jpg">
-                            <div class="labels">
-                                <div class="label">UX Design</div>
-                                <div class="label">UI Design</div>
+                     <div class="description">
+                         <p><h1>Hi! I'm Geng Hao.</h1></p>
+                         <p>I'm an aspiring product designer from Singapore.</p>
+                         <p><a class="worknav" href="#work">View my work &#9662;</a></p>
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </section>
+     
+         <section id="work">
+            <div class="container-fluid work">
+                <div class="row works">
+                    <div class="col-12 col-md-6 mx-auto item">
+                        <a href="accenture.html">
+                            <div class="preview">
+                                <img src="img/accenture-hero.jpg">
+                                <div class="labels">
+                                    <div class="label">UX Design</div>
+                                    <div class="label">UI Design</div>
+                                </div>
+                                <div class="caption">Accenture Challenge</div>
                             </div>
-                            <div class="caption">Accenture Challenge</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="investingnote.html">
-                        <div class="preview">
-                            <img src="img/investingnote.jpg">
-                            <div class="labels">
-                                <div class="label">UI Design</div>
-                                <div class="label">UX Design</div>
-                                <div class="label">Visual Design</div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 mx-auto item">
+                        <a href="investingnote.html">
+                            <div class="preview">
+                                <img src="img/investingnote.jpg">
+                                <div class="labels">
+                                    <div class="label">UI Design</div>
+                                    <div class="label">UX Design</div>
+                                    <div class="label">Visual Design</div>
+                                </div>
+                                <div class="caption">InvestingNote</div>
                             </div>
-                            <div class="caption">InvestingNote</div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
-            </div>
 
-            <div class="row works">
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="oneservice.html">
-                        <div class="preview">
-                            <img src="img/oneservice.jpg">
-                            <div class="labels">
-                                <div class="label">UX Design</div>
-                                <div class="label">UI Design</div>
+                <div class="row works">
+                    <div class="col-12 col-md-6 mx-auto item">
+                        <a href="oneservice.html">
+                            <div class="preview">
+                                <img src="img/oneservice.jpg">
+                                <div class="labels">
+                                    <div class="label">UX Design</div>
+                                    <div class="label">UI Design</div>
+                                </div>
+                                <div class="caption">OneService</div>
                             </div>
-                            <div class="caption">OneService</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-12 col-md-6 mx-auto item">
-                    <a href="srina.html">
-                        <div class="preview">
-                            <img src="img/srina.jpg">
-                            <div class="labels">
-                                <div class="label">Branding &amp; Identity</div>
-                                <div class="label">Visual Design</div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 mx-auto item">
+                        <a href="srina.html">
+                            <div class="preview">
+                                <img src="img/srina.jpg">
+                                <div class="labels">
+                                    <div class="label">Branding &amp; Identity</div>
+                                    <div class="label">Visual Design</div>
+                                </div>
+                                <div class="caption">Srina</div>
                             </div>
-                            <div class="caption">Srina</div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
-            </div>
 
-            <div class="row works">
-                <div class="col-12 col-md-6 item">
-                    <a href="projectshowcase.html">
-                        <div class="preview">
-                            <img src="img/project-showcase.jpg">
-                            <div class="caption">Project Showcase</div>
-                        </div>
-                    </a>
+                <div class="row works">
+                    <div class="col-12 col-md-6 item">
+                        <a href="projectshowcase.html">
+                            <div class="preview">
+                                <img src="img/project-showcase.jpg">
+                                <div class="labels">
+                                </div>
+                                <div class="caption">Project Showcase</div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="footer">
-        <div class="container-fluid footer">
-            <div class="row">
-                <div class="col-12 text-center mx-auto">
-                    <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fa fa-linkedin left"></i></a>
-                    <a href="http://instagram.com/genghaot" target="_blank"><i class="fa fa-instagram left"></i></a>
+        <section id="footer">
+            <div class="container-fluid footer">
+                <div class="row">
+                    <div class="col-12 text-center mx-auto">
+                        <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank"><i class="fa fa-linkedin left"></i></a>
+                        <a href="http://instagram.com/genghaot" target="_blank"><i class="fa fa-instagram left"></i></a>
+                    </div>
+                </div>
+                <div class="row copyright">
+                    <div class="col-12 text-center mx-auto">
+                        Copyright &copy; 2017 Teo Geng Hao
+                    </div>
                 </div>
             </div>
-            <div class="row copyright">
-                <div class="col-12 text-center mx-auto">
-                    Copyright &copy; 2017 Teo Geng Hao
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
 </div>
 
 <!-- JavaScript placed at the end of the document so the pages load faster -->
