--- a/accenture.html
+++ b/accenture.html
@@ -51,7 +51,7 @@
             <div class="container-fluid accenture-summary">
                 <div class="row">
                     <div class="col-12 wow fadeIn">
-                        <img src="img/accenture-hero.png">
+                        <img src="img/accenture-hero.jpg">
                     </div>
                 </div>
 
@@ -121,10 +121,10 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6">
-                    <img src="img/accenture-wireframes-1.png">
+                    <img src="img/accenture-wireframes-1.jpg">
                 </div>
                 <div class="col-12 col-sm-6">
-                    <img src="img/accenture-wireframes-2.png">
+                    <img src="img/accenture-wireframes-2.jpg">
                 </div>
             </div>
 
@@ -142,7 +142,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img src="img/accenture-my-expenses.png">
+                    <img src="img/accenture-my-expenses.jpg">
                 </div>
             </div>
 
@@ -160,7 +160,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img src="img/accenture-my-goals.png">
+                    <img src="img/accenture-my-goals.jpg">
                 </div>
             </div>
 
@@ -178,7 +178,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img src="img/accenture-my-devices.png">
+                    <img src="img/accenture-my-devices.jpg">
                 </div>
             </div>
 
@@ -196,7 +196,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-6 mx-auto">
-                    <img src="img/accenture-community.png">
+                    <img src="img/accenture-community.jpg">
                 </div>
             </div>
 
