--- a/projectshowcase.html
+++ b/projectshowcase.html
@@ -58,7 +58,7 @@
 
                <div class="row">
                    <div class="col-12 col-sm-10 col-md-6 col-lg-5 mx-auto wow fadeIn">
-                      <img src="img/equity-consulting-group.png">
+                      <img src="img/equity-consulting-group.jpg">
                   </div>
                   <div class="col-12 col-sm-10 col-md-5 mx-auto align-self-center text-block">
                     <p><h2>Equity Consulting Group</h2>
@@ -82,7 +82,7 @@
 
           <div class="row">
            <div class="col-12 col-md-10 col-lg-6 mx-auto align-self-center wow fadeIn">
-              <img src="img/the-ridge-magazine.png">
+              <img src="img/the-ridge-magazine.jpg">
           </div>
           <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto align-self-center text-block">
             <p><h2>The Ridge Magazine</h2>
