--- a/srina.html
+++ b/srina.html
@@ -91,7 +91,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 mx-auto">
-                    <img src="img/srina-brand-identity-concepts.png">
+                    <img src="img/srina-brand-identity-concepts.jpg">
                 </div>
                 <div class="col-12 mx-auto caption">Preliminary brand identity concepts</div>
             </div>
@@ -104,10 +104,10 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/srina-landing-page-1.png">
+                    <img src="img/srina-landing-page-1.jpg">
                 </div>
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img src="img/srina-landing-page-2.png">
+                    <img src="img/srina-landing-page-2.jpg">
                 </div>
             </div>
 
