--- a/projectshowcase.html
+++ b/projectshowcase.html
@@ -69,10 +69,10 @@
 
             <div class="row greybg">
             	<div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto wow fadeIn">
-            		<img src="img/new-york-travel-guide-1.png">
+            		<img src="img/new-york-travel-guide-1.jpg">
             	</div>
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto wow fadeIn">
-                    <img src="img/new-york-travel-guide-2.png">
+                    <img src="img/new-york-travel-guide-2.jpg">
                 </div>
                 <div class="col-12 col-sm-10 col-md-8 mx-auto text-left text-block">
                   <p><h2>New York Travel Guide</h2>
