OneService page changes

--- a/oneservice.html
+++ b/oneservice.html
@@ -148,16 +148,14 @@
                 </div>
 
                 <div class="row image-block wow fadeIn">
-                    <div class="col-md-2"></div>
-                    <div class="col-6 col-md-4 mx-auto">
+                    <div class="col-6 col-md-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-1.jpg">
                         <div class="caption">Previous Home Page</div>
                     </div>
-                    <div class="col-6 col-md-4 mx-auto">
+                    <div class="col-6 col-md-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-2.jpg">
                         <div class="caption">Redesigned Home Page</div>
                     </div>
-                    <div class="col-md-2"></div>
                 </div>
 
                 <div class="row">
@@ -173,16 +171,14 @@
                 </div>
 
                 <div class="row image-block wow fadeIn">
-                    <div class="col-md-2"></div>
-                    <div class="col-6 col-md-4 mx-auto">
+                    <div class="col-6 col-md-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-3.jpg">
                         <div class="caption">Previous 'Submit New Case' Page</div>
                     </div>
-                    <div class="col-6 col-md-4 mx-auto">
+                    <div class="col-6 col-md-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-4.jpg">
                         <div class="caption">Redesigned 'Submit New Case' Page</div>
                     </div>
-                    <div class="col-md-2"></div>
                 </div>
 
                 <div class="row">
@@ -192,13 +188,13 @@
                 </div>
 
                 <div class="row image-block wow fadeIn">
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-5.jpg">
                     </div>
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-6.jpg">
                     </div>
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-7.jpg">
                     </div>
                 </div>
@@ -210,16 +206,14 @@
                 </div>
 
                 <div class="row image-block wow fadeIn">
-                    <div class="col-md-2"></div>
-                    <div class="col-6 col-md-4 mx-auto">
+                    <div class="col-6 col-md-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-8.jpg">
                         <div class="caption">Previous 'Case Submitted' Page</div>
                     </div>
-                    <div class="col-6 col-md-4 mx-auto">
+                    <div class="col-6 col-md-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-9.jpg">
                         <div class="caption">New 'Confirm Submission' Page</div>
                     </div>
-                    <div class="col-md-2"></div>
                 </div>
 
                 <div class="row">
@@ -229,14 +223,12 @@
                 </div>
 
                 <div class="row image-block wow fadeIn">
-                    <div class="col-md-2"></div>
-                    <div class="col-6 col-md-4 mx-auto">
+                    <div class="col-6 col-md-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-10.jpg">
                     </div>
-                    <div class="col-6 col-md-4 mx-auto">
+                    <div class="col-6 col-md-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-11.jpg">
                     </div>
-                    <div class="col-md-2"></div>
                 </div>
 
                 <div class="row">
@@ -252,13 +244,13 @@
                 </div>
 
                 <div class="row image-block wow fadeIn">
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-12.jpg">
                     </div>
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-13.jpg">
                     </div>
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-14.jpg">
                     </div>
                 </div>
@@ -270,13 +262,13 @@
                 </div>
 
                 <div class="row image-block wow fadeIn">
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-15.jpg">
                     </div>
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-16.jpg">
                     </div>
-                    <div class="col-4 mx-auto">
+                    <div class="col-4 col-lg-3 mx-auto">
                         <img src="img/oneservice-app-prototype-17.jpg">
                     </div>
                 </div>
@@ -297,6 +289,10 @@
                                 <li>Introducing a feed of submitted cases in the user's vicinity to provide an integrated experience where they can be more aware of issues that are happening around them.</li>
                             </ol>
                         </p>
+                        <p>Feel free to try our interactive prototype below:</p>
+                    </div>
+                    <div class="col-12 mx-auto text-center">
+                        <iframe width="438" height="930" src="http://invis.io/WY9BFU6DA" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
