--- a/oneservice.html
+++ b/oneservice.html
@@ -289,10 +289,7 @@
                                 <li>Introducing a feed of submitted cases in the user's vicinity to provide an integrated experience where they can be more aware of issues that are happening around them.</li>
                             </ol>
                         </p>
-                        <p>Feel free to try our interactive prototype below:</p>
-                    </div>
-                    <div class="col-12 mx-auto text-center">
-                        <iframe width="438" height="930" src="http://invis.io/WY9BFU6DA" frameborder="0" allowfullscreen></iframe>
+                        <p>Click <a href="https://invis.io/HZ96VO05K" target="_blank"> to try our interactive prototype!</p>
                     </div>
                 </div>
             </section>
