--- a/accenture.html
+++ b/accenture.html
@@ -209,10 +209,7 @@
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
                     <h2>Outcome</h2>
-                    <p>We are very happy to have emerged as second runner-up in the challenge, and received positive feedback from participants and the organising committee. Have a go at our interactive prototype below!</p>
-                </div>
-                <div class="col-12 mx-auto text-center">
-                    <iframe width="424" height="916" src="http://invis.io/9BE6QNU6C" frameborder="0" allowfullscreen></iframe>
+                    <p>We are very happy to have emerged as second runner-up in the challenge, and received positive feedback from participants and the organising committee. Click <a href="https://invis.io/5CC9CQAVU" target="_blank">here</a> to try our interactive prototype!</p>
                 </div>
             </div>
         </div>
